k8s/mongo.yml
apiVersion: v1
kind: Service
metadata:
  name: caroster-db
  labels:
    app: caroster
spec:
  ports:
    - port: 27017
  selector:
    app: caroster
    tier: database
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caroster-db
  labels:
    app: caroster
    tier: database
spec:
  selector:
    matchLabels:
      app: caroster
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: caroster
        tier: database
    spec:
      containers:
        - image: mongo
          name: caroster-db
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: db
              mountPath: /data/db
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: pvc-caroster-db
